--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -5,11 +5,6 @@
     <title>my first html page</title>
 </head>
 <body>
-    <style>
-        table, th, td {
-          border:1px solid black;
-        }
-    </style>
     <h1>Introduction</h1>
     <p>hello my name is yassine fawzi</p>
     <h2>i'm an alx student</h2>
@@ -23,6 +18,7 @@
     </header>
     <main>
     <article>
+        <h2>article</h2>
     <ul>
     <li><a href="https://www.alxafrica.com/"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="my first image"></a></li>
     <li><a href="/tweets.html">tweets</a></li>
@@ -61,7 +57,7 @@
     </main>
     <footer>
         <p>made by yassine fawzi</p>
-        <a href="https://www.alxafrica.com/"target="_blank">here</a>
+        <a href="https://www.alxafrica.com/" target="_blank">here</a>
     </footer>
     
 </body>
