--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>my first html page</title>
   </head>
   <body>
@@ -19,12 +19,11 @@
     
     <ul>
     <li><a href="https://www.alxafrica.com/"
-      ><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="my first image"
-    /></a></li>
+      ><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png/" alt="my first image/"></a></li>
 
     <li><blockquote class="twitter-tweet">
       <p lang="en" dir="ltr">
-        ❗⚠️❗ Earth Update ❗⚠️❗ <br /><br />- Perm-banned France<br />
+        ❗⚠️❗ Earth Update ❗⚠️- Perm-banned France  
         - France has been removed from planet Earth
         <a href="https://t.co/fZxZl3FpQz">pic.twitter.com/fZxZl3FpQz</a>
       </p>
@@ -35,16 +34,15 @@
       >
     </blockquote>
     <script
-      async
       src="https://platform.twitter.com/widgets.js"
-      charset="utf-8"
-    ></script></li>
+    ></script>
+  </li>
 
     <li><a href="/base_index.html">main page</a></li>
     </ul>
     <footer>
         <p>made by yassine fawzi</p>
-        <a href="https://www.alxafrica.com/"target="_blank">here</a>
+        <a href="https://www.alxafrica.com/" target="_blank">here</a>
     </footer>
   </body>
 </html>
