--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -12,9 +12,11 @@
     <h3>and this is my first html page</h3>
     <p>i hope you like my work</p>
     <header>
-        <a href="/base_index.html">base_index</a>
-        <a href="/index.html">index</a>
-        <a href="/tweets.html">tweets</a>
+    <ul>
+        <li><a href="/base_index.html">base_index</a></li>
+        <li><a href="/index.html">index</a></li>
+        <li><a href="/tweets.html">tweets</a></li>
+    </ul>
     </header>
     <main>
     <article>
