--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -12,11 +12,15 @@
     <h3>and this is my first html page</h3>
     <p>i hope you like my work</p>
     <header>
-        <a href="/base_index.html">base_index</a>
-        <a href="/index.html">index</a>
-        <a href="/tweets.html">tweets</a>
+      <ul>
+        <li><a href="/base_index.html">base_index</a></li>
+        <li><a href="/index.html">index</a></li>
+        <li><a href="/tweets.html">tweets</a></li>
+      </ul>
     </header>
-    
+    <main>
+      <article>
+          <h2>article</h2>
     <ul>
     <li><a href="https://www.alxafrica.com/"
       ><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png/" alt="my first image/"></a></li>
@@ -30,16 +34,16 @@
       &mdash; Earth Updates (@Earth_Updates)
       <a
         href="https://twitter.com/Earth_Updates/status/1724155931284435288?ref_src=twsrc%5Etfw"
-        >November 13, 2023</a
-      >
+        >November 13, 2023</a>
     </blockquote>
     <script
       src="https://platform.twitter.com/widgets.js"
     ></script>
   </li>
-
     <li><a href="/base_index.html">main page</a></li>
     </ul>
+      </article>
+    </main>
     <footer>
         <p>made by yassine fawzi</p>
         <a href="https://www.alxafrica.com/" target="_blank">here</a>
