--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -43,6 +43,9 @@
     <li><a href="/base_index.html">main page</a></li>
     </ul>
       </article>
+      <aside>
+        <p>placeholder to add comment thread later</p>
+      </aside>
     </main>
     <footer>
         <p>made by yassine fawzi</p>
