--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>my first html page</title>
   </head>
   <body>
+    <!--header-->
     <header>
-      <!header>
-      <img src="image.jpg" alt="img" />
+      <img src="image.jpg" alt="img">
       <a href="/link1">link1</a>
       <a href="/link2">link2</a>
       <a href="/link3">link3</a>
     </header>
 
     <main>
+      <!--Banner-->
       <section>
-        <!Banner>
         <div>
           <h1>Title</h1>
           <p>Enjoy The Website</p>
@@ -25,29 +25,29 @@
         <div>
           <h1>title</h1>
           <div>
-            <img src="image.jpg" alt="img" />
+            <img src="image.jpg" alt="img">
             <h2>name</h2>
             <p>subtitle</p>
           </div>
 
           <div>
-            <img src="image.jpg" alt="img" />
+            <img src="image.jpg" alt="img">
             <h2>name</h2>
             <p>subtitle</p>
           </div>
 
           <div>
-            <img src="image.jpg" alt="img" />
+            <img src="image.jpg" alt="img">
             <h2>name</h2>
             <p>subtitle</p>
           </div>
         </div>
       </section>
 
-      <!Quote>
+      <!--Quote-->
       <section>
         <div>
-          <img src="image.jpg" alt="img" />
+          <img src="image.jpg" alt="img">
           <div>
             <blockquote><p>quote</p></blockquote>
             <q>yassine fawzi</q>
@@ -56,108 +56,108 @@
         </div>
       </section>
 
-      <!Videos>
+      <!--Videos-->
       <section>
         <h1>Title</h1>
         <div>
           <div>
-            <img src="image.jpg" alt="img" />
+            <img src="image.jpg" alt="img">
             <h2>heading</h2>
             <p>text</p>
             <div>
-              <img src="image.jpg" alt="img" />
+              <img src="image.jpg" alt="img">
               <h2>heading for the autor</h2>
             </div>
             <div>
-              <img src="star.png" alt="Star" />
-              <img src="star.png" alt="Star" />
-              <img src="star.png" alt="Star" />
-              <img src="star.png" alt="Star" />
-              <img src="star.png" alt="Star" />
+              <img src="star.png" alt="Star">
+              <img src="star.png" alt="Star">
+              <img src="star.png" alt="Star">
+              <img src="star.png" alt="Star">
+              <img src="star.png" alt="Star">
               <p>text</p>
             </div>
           </div>
 
           <div>
-            <img src="image.jpg" alt="img" />
+            <img src="image.jpg" alt="img">
             <h2>heading</h2>
             <p>text</p>
             <div>
-              <img src="image.jpg" alt="img" />
+              <img src="image.jpg" alt="img">
               <h2>heading for the autor</h2>
             </div>
             <div>
-              <img src="star.png" alt="Star" />
-              <img src="star.png" alt="Star" />
-              <img src="star.png" alt="Star" />
-              <img src="star.png" alt="Star" />
-              <img src="star.png" alt="Star" />
+              <img src="star.png" alt="Star">
+              <img src="star.png" alt="Star">
+              <img src="star.png" alt="Star">
+              <img src="star.png" alt="Star">
+              <img src="star.png" alt="Star">
               <p>text</p>
             </div>
           </div>
 
           <div>
-            <img src="image.jpg" alt="img" />
+            <img src="image.jpg" alt="img">
             <h2>heading</h2>
             <p>text</p>
             <div>
-              <img src="image.jpg" alt="img" />
+              <img src="image.jpg" alt="img">
               <h2>heading for the autor</h2>
             </div>
             <div>
-              <img src="star.png" alt="Star" />
-              <img src="star.png" alt="Star" />
-              <img src="star.png" alt="Star" />
-              <img src="star.png" alt="Star" />
-              <img src="star.png" alt="Star" />
+              <img src="star.png" alt="Star">
+              <img src="star.png" alt="Star">
+              <img src="star.png" alt="Star">
+              <img src="star.png" alt="Star">
+              <img src="star.png" alt="Star">
               <p>text</p>
             </div>
           </div>
 
           <div>
-            <img src="image.jpg" alt="img" />
+            <img src="image.jpg" alt="img">
             <h2>heading</h2>
             <p>text</p>
             <div>
-              <img src="image.jpg" alt="img" />
+              <img src="image.jpg" alt="img">
               <h2>heading for the autor</h2>
             </div>
             <div>
-              <img src="star.png" alt="Star" />
-              <img src="star.png" alt="Star" />
-              <img src="star.png" alt="Star" />
-              <img src="star.png" alt="Star" />
-              <img src="star.png" alt="Star" />
+              <img src="star.png" alt="Star">
+              <img src="star.png" alt="Star">
+              <img src="star.png" alt="Star">
+              <img src="star.png" alt="Star">
+              <img src="star.png" alt="Star">
               <p>text</p>
             </div>
           </div>
         </div>
       </section>
 
-      <!Videos>
+      <!--Videos-->
       <section>
         <h1>Title</h1>
         <div>
           <div>
-            <img src="image.jpg" alt="img" />
+            <img src="image.jpg" alt="img">
             <h2>heading</h2>
             <p>text</p>
           </div>
 
           <div>
-            <img src="image.jpg" alt="img" />
+            <img src="image.jpg" alt="img">
             <h2>heading</h2>
             <p>text</p>
           </div>
 
           <div>
-            <img src="image.jpg" alt="img" />
+            <img src="image.jpg" alt="img">
             <h2>heading</h2>
             <p>text</p>
           </div>
 
           <div>
-            <img src="image.jpg" alt="img" />
+            <img src="image.jpg" alt="img">
             <h2>heading</h2>
             <p>text</p>
           </div>
@@ -165,7 +165,7 @@
         </div>
       </section>
 
-      <!FAQ>
+      <!--FAQ-->
       <section>
         <div>
           <div>
@@ -192,15 +192,15 @@
         </div>
       </section>
     </main>
-    <!footer>
+    <!--footer-->
     <footer>
       <div>
         <div>
-          <img src="image.jpg" alt="img" />
+          <img src="image.jpg" alt="img">
           <div>
-            <a href="/link"><img src="image.jpg" alt="img" /></a>
-            <a href="/link"><img src="image.jpg" alt="img" /></a>
-            <a href="/link"><img src="image.jpg" alt="img" /></a>
+            <a href="/link"><img src="image.jpg" alt="img"></a>
+            <a href="/link"><img src="image.jpg" alt="img"></a>
+            <a href="/link"><img src="image.jpg" alt="img"></a>
           </div>
         </div>
         <p>text</p>
