--- a/flexbox/1-index.html
+++ b/flexbox/1-index.html
@@ -60,8 +60,7 @@
         </div>
       </section>
       <!– Services section –>
-      <section id="services" class="section">
-        <div class="section-services">
+      <section id="services" class="section-services">
             <div class="container">
             <header class="section-header">
                 <h2 class="section-title">Services</h2>
@@ -103,12 +102,10 @@
                 </li>
                 </ul>
             </div>
-            </div>
         </div>
       </section>
       <!– Works section –>
-      <section id="works" class="section" data-section-theme="dark">
-        <div class="section-works">
+      <section id="works" class="section-works" data-section-theme="dark">
             <div class="container">
             <header class="section-header">
                 <h2 class="section-title">Works</h2>
@@ -154,12 +151,10 @@
                 </li>
                 </ul>
             </div>
-            </div>
         </div>
       </section>
       <!– About Us section –>
-      <section id="about" class="section">
-        <div class="section-about-us">
+      <section id="about" class="section-about-us">
             <div class="container">
             <header class="section-header">
                 <h2 class="section-title">About Us</h2>
@@ -183,12 +178,10 @@
             <div class="section-footer">
                 <a href="#" class="button">Learn more about us</a>
             </div>
-            </div>
         </div>
       </section>
       <!– Latest news section –>
-      <section id="latest_news" class="section">
-        <div class="section-latest-news">
+      <section id="latest_news" class="section-latest-news">
             <div class="container">
             <header class="section-header">
                 <h2 class="section-title">Latest News</h2>
@@ -230,12 +223,10 @@
                 </li>
                 </ul>
             </div>
-            </div>
         </div>
       </section>
       <!– Testimonials section –>
-      <section id="testimonial" class="section">
-        <div class="section-testimonial">
+      <section id="testimonial" class="section-testimonial">
             <div class="container">
             <header class="section-header">
                 <h2 class="section-title">Testimonials</h2>
@@ -275,12 +266,10 @@
                 </li>
                 </ul>
             </div>
-            </div>
         </div>
       </section>
       <!– Contact section –>
-      <section id="contact" class="section">
-        <div class="section-contact">
+      <section id="contact" class="section-contact">
             <div class="container">
             <header class="section-header">
                 <h2 class="section-title">Contact</h2>
@@ -292,8 +281,7 @@
             <div class="section-footer">
                 <a href="#" class="button">Get in touch</a>
             </div>
-            </div>
-        </div>
+          </div>
       </section>
     </main>
     <!– Footer –>
