--- a/headphones/1-index.html
+++ b/headphones/1-index.html
@@ -49,9 +49,9 @@
           </div>
         </section>
 
-        <!--"What we do..."-->
+        <!-- What we do -->
 
-        <section class="what-we-do">
+        <section class="what-we-do" id="what-we-do">
           <div class="what-we-do-con">
           <h1 class="first-tag">What we do...</h1>
           <p class="second-tag">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore delectus et
